--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "5.12.1",
     "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
@@ -24,6 +25,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
+    "url-loader": "3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
