--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "pages": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
@@ -19,15 +20,16 @@
     "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
-    "url-loader": "3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "url-loader": "3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
